[workspace]
members = [
    "crates/common",
    "crates/formats",
    "crates/core",
    "crates/gpu",
    "crates/audio",
    "crates/input",
    "crates/anotherps4-bin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["AnotherPS4 Team"]
license = "GPL-2.0-or-later"
description = "A PS4 emulator written in Rust, focused on native performance"

[workspace.dependencies]
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Memory & data
bitflags = "2"
zerocopy = { version = "0.8", features = ["derive"] }
memmap2 = "0.9"
byteorder = "1"

# Concurrency
parking_lot = "0.12"
rustc-hash = "2"

# Vulkan
ash = "0.38"

# Window
winit = "0.30"
raw-window-handle = "0.6"

# Audio
cpal = "0.15"

# Input
gilrs = "0.11"

# SPIR-V
rspirv = "0.12"
spirv = "0.3"

# Internal crates
anotherps4-common = { path = "crates/common" }
anotherps4-formats = { path = "crates/formats" }
anotherps4-core = { path = "crates/core" }
anotherps4-gpu = { path = "crates/gpu" }
anotherps4-audio = { path = "crates/audio" }
anotherps4-input = { path = "crates/input" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = false
debug = 1

[profile.dev]
opt-level = 1
