[package]
name = "anotherps4-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Common types and utilities for AnotherPS4"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bitflags = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
rustc-hash = { workspace = true }
