[package]
name = "anotherps4-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PS4 core emulation: kernel HLE, loader, linker, memory"

[dependencies]
anotherps4-common = { workspace = true }
anotherps4-formats = { workspace = true }
anotherps4-gpu = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bitflags = { workspace = true }
byteorder = { workspace = true }
parking_lot = { workspace = true }
rustc-hash = { workspace = true }
memmap2 = { workspace = true }
libc = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
