[package]
name = "anotherps4-formats"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PS4 file format parsers (PSF, PKG, PFS, TRP)"

[dependencies]
anotherps4-common = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }
