[package]
name = "anotherps4-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PS4 GPU emulation: Liverpool, shader recompiler, Vulkan renderer"

[dependencies]
anotherps4-common = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
ash = { workspace = true }
ash-window = "0.13"
parking_lot = { workspace = true }
winit = { workspace = true }
raw-window-handle = { workspace = true }
